initial video code refactored

--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
 <body>
 
 <div class="player">
-    <video class="video" poster="./assets/images/Lens_Zoom_Effect_Transitions.jpg">
-        <source src="./assets/video/Lens_Zoom_Effect_Transitions.mp4"/>
-        <source src="./assets/video/Lens_Zoom_Effect_Transitions.webm"/>
-        <source src="./assets/video/Lens_Zoom_Effect_Transitions.ogg"/>
+    <video class="video">
     </video>
     <div class="controls">
         <div>
