one video replaced

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         </button>
         <span>Elegant Logo Intro</span>
         <button class="videoTrack" data-src="Elegant_Logo_Intro" data-poster="Elegant_Logo_Intro.jpg">Play</button>
-        <span>Minimal Transitions</span>
-        <button class="videoTrack" data-src="Minimal_transitions" data-poster="Minimal_transitions.jpg">Play</button>
+        <span>Sketch</span>
+        <button class="videoTrack" data-src="Sketch" data-poster="Sketch.jpg">Play</button>
         <span>Lens Zoom Effect Transitions</span>
         <button class="videoTrack" data-src="Lens_Zoom_Effect_Transitions"
                 data-poster="Lens_Zoom_Effect_Transitions.jpg">Play
